recipes-connectivity: Change SSID for Intel Aero
This changes the SSID for Intel Aero from CR_AP-<MACID>
to Aero-<MACID>.

Signed-off-by: Pranav Tipnis <pranav.tipnis@intel.com>

--- a/recipes-connectivity/hostapd/hostapd/hostapd.conf
+++ b/recipes-connectivity/hostapd/hostapd/hostapd.conf
@@ -6,7 +6,7 @@ logger_stdout=-1
 logger_stdout_level=2
 ctrl_interface=/var/run/hostapd
 ctrl_interface_group=0
-ssid=CR_AP
+ssid=Aero
 hw_mode=g
 channel=1
 beacon_int=100
