--- a/recipes-connectivity/hostapd/hostapd/hostapd.conf
+++ b/recipes-connectivity/hostapd/hostapd/hostapd.conf
@@ -6,7 +6,9 @@ logger_stdout=-1
 logger_stdout_level=2
 ctrl_interface=/var/run/hostapd
 ctrl_interface_group=0
-ssid=Aero
+# ssid entry is changed by the init script
+# check /etc/init.d/autostart-hostapd.sh
+ssid=XXXXXXXXXXXXXXXXXXXXXX
 hw_mode=g
 channel=1
 beacon_int=100
