--- a/recipes-connectivity/hostapd/hostapd/udhcpd.conf
+++ b/recipes-connectivity/hostapd/hostapd/udhcpd.conf
@@ -1,7 +1,7 @@
-start 192.168.8.2 #default: 192.168.0.20
-end 192.168.8.200 #default: 192.168.0.254
+start 192.168.8.2
+end 192.168.8.200
 
-interface wlan0 #default: eth0
+interface wlan0
 
 opt dns 192.168.8.3 192.168.8.10
 option subnet 255.255.255.0
